--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="box" id="box">
-        <div class="text" id="text"> coming soon <span class="multiText"></span></div>
+        <div class="text" id="text"> love you <span class="multiText"></span></div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
       <script>
