--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <div class="box" id="box">
-        <div class="text" id="text">I love<span class="multiText"></span></div>
+        <div class="text" id="text">I love <span class="multiText"></span></div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
       <script>
         var typingEffect = new Typed(".multiText",{
-          strings : ["you","","you"],
+          strings : ["YOU","","YOU"],
           loop: true,
           typeSpeed :100,
           backSpeed:70,
@@ -28,8 +28,8 @@
         
       <script src="scripts.js"></script>
   <div class="footer">
-   <--  Created by kirandhakal copyright © 2022|All right reserved-->
-   happy valentines day my love 2024</p>
+   <!--  Created by kirandhakal copyright © 2022|All right reserved-->
+   Happy valentines day my love 2024</p>
     </div>
  
 
