--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="box" id="box">
         <div class="text" id="text">I love <span class="multiText"></span></div>
       </div>
+      <div class="heart" id="heart"></div>
       <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
       <script>
         var typingEffect = new Typed(".multiText",{
